# red-ui

./: .gitignore  CLAUDE.md  FEATURES.md  LICENSE  README.md  WTF.md  package.json  pnpm-lock.yaml
.changeset/: README.md  config.json  fix-kv-collection-preview.md  mcp-local-file-read-only-when-locked.md  mcp-local-same-origin-ui.md  mcp-remote-vs-local-target.md  mcp-server-side-data-tools.md  settings-search-export.md
.claude/: settings.json
.github/workflows/: changesets.yml  ci.yml  pages.yml  release.yml
.impeccable/critique/: 2026-05-25T16-36-13Z__localhost.md
.red/: CONTEXT.md  config.yaml
.red/adr/: 0001-one-core-three-surfaces.md  0001-single-bundle-multi-source-bootstrap.md  0002-drop-red-proxy-rely-on-cors.md  0002-web-surface-reach-via-reddb-cors-allowlist.md  0003-bundle-delivery-versioned-tarball-embedded-in-red.md  0003-transport-reachability-is-a-surface-capability.md  0004-embeddable-lib-shadow-dom-isolation.md  0004-session-handoff-short-lived-token.md  0005-host-ui-reddb-io-on-cloudflare-pages.md  0005-mcp-app-preconfiguration-channel.md  0006-capability-negotiation-over-lockstep.md  0006-mcp-local-file-spawns-red-server.md  0007-config-secret-policy-authoring-rides-the-sql-surface.md  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docker/: compose.yml
scripts/: changesets-tag-release.sh  embed-motifs.ts  embedded.sh  ingest-grimm.ts  seed.sh  sync-desktop-sidecar.sh  sync-desktop-version.mjs
(+9 files in other folders)
