[package]
name = "red-ui"
version = "0.0.0"
description = "reddb universal client"
authors = ["reddb-io"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "red_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
anyhow = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
