[package]
name = "red-ui"
version = "0.0.1"
description = "reddb universal client"
authors = ["reddb-io"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "red_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
anyhow = "1"
# OS keychain bridge for the EncryptedStore. macOS → Keychain Services,
# Windows → Credential Manager, Linux → libsecret via the Secret Service API.
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
